Securematics - Promotions - Fix margin on mobile #9140

--- a/public/less/sections/common-list-container.less
+++ b/public/less/sections/common-list-container.less
@@ -46,6 +46,10 @@
             }
         }
     }
+    @media (max-width: 767px) {
+        margin-left: 0 !important;
+        margin-right: 0!important;                 
+    }
 }
 .securematics-details-view{
 	padding: 0;
